--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1'
         classpath 'com.android.tools.build:gradle:3.2.1'
         
 
