--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".view.activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".view.activity.UserInfoEditActivity">
             <intent-filter>
@@ -51,11 +47,18 @@
                 <category android:name="android.intent.category.AboutUsActivity" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.RegisterActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.RegisterActivity" />
+
+                <category android:name="android.intent.category.RegisterActivity" />
+            </intent-filter>
+        </activity>
         <activity android:name=".view.activity.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.LoginActivity" />
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LoginActivity" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
