--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,16 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    //为了解决部分第三方库重复打包了META-INF的问题
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+    lintOptions {
+        abortOnError false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -56,9 +66,6 @@ dependencies {
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     //定位
     implementation 'com.amap.api:location:4.2.0'
-    //二维码
-    implementation 'com.google.zxing:core:3.3.3'
-    //搜索窗库
 
     //图片库
     implementation 'com.github.bumptech.glide:glide:3.7.0'
@@ -76,4 +83,11 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     //断电下载库
     implementation 'com.mindorks.android:prdownloader:0.4.0'
+
+    // LeanCloud 基础包
+    implementation('cn.leancloud.android:avoscloud-sdk:v4.7.3')
+
+    //二维码生成/扫描库
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+
 }
