--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,12 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    //镜头聚焦
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
+        android:name=".view.activity.BaseActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,13 +37,7 @@
         <activity android:name=".view.activity.MainActivity">
 
         </activity>
-        <activity android:name=".view.activity.UserInfoEditActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.UserInfoEditActivity" />
-
-                <category android:name="android.intent.category.UserInfoEditActivity" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".view.activity.UserInfoEditActivity"></activity>
         <activity android:name=".view.activity.AboutUsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.AboutUsActivity" />
@@ -61,6 +59,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.DrugsActivity" />
+
     </application>
 
 </manifest>
