--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     
     repositories {
         google()
+        maven{
+            url "http://mvn.leancloud.cn/nexus/content/repositories/public"
+        }
         jcenter()
     }
     dependencies {
@@ -20,6 +23,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://mvn.leancloud.cn/nexus/content/repositories/public"
+        }
     }
 }
 
