--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     //好看的Toast
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     //定位
-    implementation 'com.amap.api:location:4.2.0'
+//    implementation 'com.amap.Api:location:4.2.0'
 
     //图片库
     implementation 'com.github.bumptech.glide:glide:3.7.0'
