--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,8 @@ dependencies {
     //二维码生成/扫描库
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
 
+    //事件总线注解
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
+
 }
