弄完git冲突问题后的第二次commit
Signed-off-by: sweetDeliven <1214621260@qq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    //镜头聚焦
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -34,6 +34,7 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activity.GetPrescriptionAUTOActivity"></activity>
         <activity android:name=".view.activity.MainActivity" />
         <activity android:name=".view.activity.UserInfoEditActivity" />
         <activity android:name=".view.activity.AboutUsActivity">
@@ -61,10 +62,10 @@
             android:name=".view.activity.UpdateNickNameActivity"
             android:label="修改昵称" />
         <activity android:name=".view.activity.UpdatePassWordsActivity" />
-        <activity android:name=".view.activity.ManualTakingMedicationActivity"
+        <activity
+            android:name=".view.activity.ManualTakingMedicationActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/noActionBar2"
-           > </activity>
+            android:theme="@style/noActionBar2"></activity>
     </application>
 
 </manifest>
